Fixed issue with missing groups causing custom channels not to load

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -597,5 +597,7 @@
     <string id="30810">Group 10</string>
     <string id="30811">Group 11</string>
     <string id="30812">Group 12</string>
+    <string id="30813">Group 13</string>
+    <string id="30814">Group 14</string>
 
 </strings>
