--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 Changelog
 
 
+1.0.1
+    Fixed bug where custom channels were not being imported correctly.
+
 1.0.0
     First version after forking pseudoTV and adding new channel management system.
