Added zepfan skins.

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -6,6 +6,7 @@
     <string id="30004">Time between channel resets</string>
     <string id="30005">Fill in channels with presets</string>
     <string id="30006">Auto Fill Custom Channels</string>
+    <string id="30007">Hour to reset channels</string>
 
     <string id="30057">Mixed TV Shows are always ordered by airdate ascending.</string>
     <string id="30058">Note: Random setting doesn't affect Mixed TV Show Channels.</string>
