--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,11 @@
 Changelog
 
 
+1.0.3
+    Added additional debug logging output to Overlay.py
+
 1.0.2
-    Added additional debug logging output
+    Added additional debug logging output to PresetChannels.py
 
 1.0.1
     Fixed bug where custom channels were not being imported correctly.
