--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 Changelog
 
 
+1.0.9
+    Fixed bug where multiple resets could be triggered simultaneously.  This caused an issue where script would report Unable to find any channels.
+
 1.0.8
     Added ability to specify a custom Channel Logo Folder in Settings
 
