--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -3,14 +3,33 @@
     <string id="30001">Auto-off Timer(in minutes)</string>
     <string id="30002">Force all channels to be reset</string>
     <string id="30003">Show info when changing channels</string>
-    <string id="30004">Time between channel resets</string>
+    <string id="30004">    Time between auto channel resets</string>
     <string id="30005">Fill in channels with presets</string>
     <string id="30006">Auto Fill Custom Channels</string>
-    <string id="30007">Hour to reset channels</string>
+    <string id="30007">    Hour to auto reset channels</string>
     <string id="30008">Show channel logo over playing video</string>
     <string id="30009">Enable Channel Logo Folder</string>
-    <string id="30010">Select Folder</string>
+    <string id="30010">    Select Folder</string>
+    <string id="30011">    Select Commercials Folder</string>
+    <string id="30012">    Select Bumpers Folder</string>
+    <string id="30013">    Select Trailers Folder</string>
+    <string id="30014">Enable Auto Channel Reset</string>
 
+    <string id="30042">    Maximum Number of Commercials Between Episodes</string>
+    <string id="30043">    Maximum Number of Bumpers Between Episodes</string>
+    <string id="30044">    Maximum Number of Bumpers Between Shows</string>
+    <string id="30045">    Maximum Number of Commercials Between Shows</string>
+    <string id="30046">    Maximum Number of Bumpers Between Movies</string>
+    <string id="30047">    Maximum Number of Trailers Between Movies</string>
+    <string id="30048">    Number of Bumpers to Show Between Shows</string>
+    <string id="30049">Trailer & Bumper Settings</string>
+    <string id="30050">Commercial & Bumper Settings</string>
+    <string id="30051">Mix TV Show Settings</string>
+    <string id="30052">    Number of Commercials to Show Between Shows</string>
+    <string id="30053">    Number of Trailers to Show Between Shows</string>
+    <string id="30054">Enable Trailers</string>
+    <string id="30055">Enable Commercials</string>
+    <string id="30056">Enable Bumpers</string>
     <string id="30057">Mixed TV Shows are always ordered by airdate ascending.</string>
     <string id="30058">Note: Random setting doesn't affect Mixed TV Show Channels.</string>
     <string id="30059">Mixed Rating Channels</string>
@@ -29,7 +48,7 @@
     <string id="30072">TV Decade Channels</string>
     <string id="30073">TV Genre Channels</string>
     <string id="30074">Group Order Settings</string>
-    <string id="30075">Mix Channel Settings</string>
+    <string id="30075">Mix TV & Movie Channel Settings</string>
     <string id="30076">Movie Channel Settings</string>
     <string id="30077">General Settings</string>
     <string id="30078">TV Genre & TV Network Channel Settings</string>
@@ -80,7 +99,7 @@
     <string id="30121">Preteen TV (TV-Y7)</string>
     <string id="30122">Teen TV (TV-PG, TV-14)</string>
     <string id="30123">Adult TV (TV-MA)</string>
-    <string id="30125">Select Playlist</string>
+    <string id="30125">    Select Playlist</string>
     <string id="30130">Enable Custom TV Network Channel</string>
     <string id="30131">Enable Custom TV Show Channel</string>
     <string id="30132">Enable Custom Movie Genre Channel</string>
