--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -9,24 +9,36 @@
     <string id="30007">    Hour to auto reset channels</string>
     <string id="30008">Show channel logo over playing video</string>
     <string id="30009">Enable Channel Logo Folder</string>
-    <string id="30010">    Select Folder</string>
-    <string id="30011">    Select Commercials Folder</string>
-    <string id="30012">    Select Bumpers Folder</string>
-    <string id="30013">    Select Trailers Folder</string>
+    <string id="30010">Select Folder</string>
+    <string id="30011">Select Commercials Folder</string>
+    <string id="30012">Select Bumpers Folder</string>
+    <string id="30013">Select Trailers Folder</string>
     <string id="30014">Enable Auto Channel Reset</string>
 
-    <string id="30042">    Maximum Number of Commercials</string>
-    <string id="30043">    Maximum Number of Bumpers</string>
-    <string id="30044">    Maximum Number of Bumpers</string>
-    <string id="30045">    Maximum Number of Commercials</string>
-    <string id="30046">    Maximum Number of Bumpers</string>
-    <string id="30047">    Maximum Number of Trailers</string>
-    <string id="30048">    # of Bumpers to Show Between Shows</string>
+    <string id="30029">Show trailers between your movies</string>
+    <string id="30030">Folder where Trailers are</string>
+    <string id="30031">C:\Bumpers\CBS</string>
+    <string id="30032">C:\Bumpers\FOX</string>
+    <string id="30033">Organize bumpers by channel name, e.g.</string>
+    <string id="30034">Folder where commercial videos are</string>
+    <string id="30035">Commercials are any short video advertisement or promo</string>
+    <string id="30036">Folder where bumper videos are</string>
+    <string id="30037">If Auto, TV Time will determine how often</string>
+    <string id="30038">If Auto, set the maximum number to show between shows</string>
+    <string id="30039">Bumpers are short videos TV stations play between shows</string>
+    <string id="30040">Commercials</string>
+    <string id="30041">Bumpers</string>
+    <string id="30042">Maximum Number of Commercials</string>
+    <string id="30043">Maximum Number of Bumpers</string>
+    <string id="30044">Trailers</string>
+
+    <string id="30047">Maximum Number of Trailers</string>
+    <string id="30048"># of Bumpers to Show Between Shows</string>
     <string id="30049">Trailer & Bumper Settings</string>
     <string id="30050">Commercial & Bumper Settings</string>
     <string id="30051">Mix TV Show Settings</string>
-    <string id="30052">    # of Commercials to Show Between Shows</string>
-    <string id="30053">    # of Trailers to Show Between Shows</string>
+    <string id="30052"># of Commercials to Show Between Shows</string>
+    <string id="30053"># of Trailers to Show Between Shows</string>
     <string id="30054">Enable Trailers</string>
     <string id="30055">Enable Commercials</string>
     <string id="30056">Enable Bumpers</string>
