--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 Changelog
 
 
+1.0.16
+    Simplified Commercials, Bumpers and Trailers functionality
+    Fixed EPG issue when trailers added to movie channels
+
 1.0.15
     Another bug fix update 
 
